Added dataframe info

--- a/limpiezaPreprocesamiento.ipynb
+++ b/limpiezaPreprocesamiento.ipynb
@@ -2,29 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
     "import pandas_profiling\n",
     "from pandas_profiling import ProfileReport"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,58 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dt</th>\n",
-       "      <th>AverageTemperature</th>\n",
-       "      <th>AverageTemperatureUncertainty</th>\n",
-       "      <th>Country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1743-11-01</td>\n",
-       "      <td>4.384</td>\n",
-       "      <td>2.294</td>\n",
-       "      <td>Åland</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           dt  AverageTemperature  AverageTemperatureUncertainty Country\n",
-       "0  1743-11-01               4.384                          2.294   Åland"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "country = os.path.join(basedir, 'GlobalLandTemperaturesBy' + 'Country' + '.csv')\n",
     "dfCountry = pd.read_csv(country)"
@@ -123,67 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dt</th>\n",
-       "      <th>AverageTemperature</th>\n",
-       "      <th>AverageTemperatureUncertainty</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1849-01-01</td>\n",
-       "      <td>26.704</td>\n",
-       "      <td>1.435</td>\n",
-       "      <td>Abidjan</td>\n",
-       "      <td>Côte D'Ivoire</td>\n",
-       "      <td>5.63N</td>\n",
-       "      <td>3.23W</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           dt  AverageTemperature  AverageTemperatureUncertainty     City  \\\n",
-       "0  1849-01-01              26.704                          1.435  Abidjan   \n",
-       "\n",
-       "         Country Latitude Longitude  \n",
-       "0  Côte D'Ivoire    5.63N     3.23W  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "majorcity = os.path.join(basedir, 'GlobalLandTemperaturesBy' + 'MajorCity' + '.csv')\n",
     "dfMajorCity = pd.read_csv(majorcity)"
@@ -191,60 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dt</th>\n",
-       "      <th>AverageTemperature</th>\n",
-       "      <th>AverageTemperatureUncertainty</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1855-05-01</td>\n",
-       "      <td>25.544</td>\n",
-       "      <td>1.171</td>\n",
-       "      <td>Acre</td>\n",
-       "      <td>Brazil</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           dt  AverageTemperature  AverageTemperatureUncertainty State Country\n",
-       "0  1855-05-01              25.544                          1.171  Acre  Brazil"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "state = os.path.join(basedir, 'GlobalLandTemperaturesBy' + 'State' + '.csv')\n",
     "dfState = pd.read_csv(state)"
@@ -252,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +159,7 @@
        "0                                        NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -408,7 +242,7 @@
        "0  Denmark   57.05N    10.33E  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -480,7 +314,7 @@
        "0  1743-11-01               4.384                          2.294   Åland"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -558,7 +392,7 @@
        "0  Côte D'Ivoire    5.63N     3.23W  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -632,7 +466,7 @@
        "0  1855-05-01              25.544                          1.171  Acre  Brazil"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
