--- a/limpiezaPreprocesamiento.ipynb
+++ b/limpiezaPreprocesamiento.ipynb
@@ -533,7 +533,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nuestra unidad de analisis seria el tiempo y la ciudad/pais/estado que corresponde, mientras que nuestra unidad de observación sera nuestra temperatura"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Justificación del porqué los datos son de panel, longitudinales o transversales (cross-sectional)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Todas las tablas de datos son de panel, ya que se refieren a datos temporales de varios individuos, teniendo observaciones mensuales para distintas ciudades, estados, paises o ciudades mayores. La unica que varia en su tipo de datos es la global, que se convierte en longitudinal, al analizar al mismo sujeto a traves del tiempo"
    ]
   },
   {
